--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>우정에이치엔씨(주)</title>
+    <title>우정에이치앤씨(주)</title>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=86e710457f42900d0e0753a796077730"></script>
 
   </head>
